[gd_scene load_steps=3 format=3 uid="uid://b8y4m5xz6nqw1"]

[ext_resource type="Script" path="res://scripts/silenced_area.gd" id="1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(80, 80)

[node name="SilencedArea" type="Area2D"]
script = ExtResource("1")

[node name="Visual" type="Node2D" parent="."]

[node name="Base" type="Polygon2D" parent="Visual"]
color = Color(0.2, 0.2, 0.25, 0.8)
polygon = PackedVector2Array(-35, 35, -25, 40, 25, 40, 35, 35, 35, -35, 25, -40, -25, -40, -35, -35)

[node name="Crystal" type="Node2D" parent="Visual"]
position = Vector2(0, -10)

[node name="CrystalBody" type="Polygon2D" parent="Visual/Crystal"]
color = Color(0.3, 0.3, 0.4, 0.9)
polygon = PackedVector2Array(0, -25, 8, -15, 10, 5, 5, 15, -5, 15, -10, 5, -8, -15)

[node name="CrystalShine1" type="Polygon2D" parent="Visual/Crystal"]
color = Color(0.5, 0.5, 0.6, 0.6)
polygon = PackedVector2Array(-3, -15, -1, -18, 1, -15, 0, -10)

[node name="CrystalShine2" type="Polygon2D" parent="Visual/Crystal"]
position = Vector2(3, 0)
color = Color(0.5, 0.5, 0.6, 0.5)
polygon = PackedVector2Array(0, -5, 2, -7, 3, -5, 2, -2)

[node name="SilenceSymbol" type="Node2D" parent="Visual"]

[node name="Cross1" type="Line2D" parent="Visual/SilenceSymbol"]
points = PackedVector2Array(-15, -15, 15, 15)
width = 4.0
default_color = Color(0.8, 0.1, 0.1, 0.8)

[node name="Cross2" type="Line2D" parent="Visual/SilenceSymbol"]
points = PackedVector2Array(-15, 15, 15, -15)
width = 4.0
default_color = Color(0.8, 0.1, 0.1, 0.8)

[node name="Chains" type="Node2D" parent="Visual"]

[node name="Chain1" type="Line2D" parent="Visual/Chains"]
points = PackedVector2Array(-20, -40, -25, -30, -20, -20, -25, -10, -20, 0)
width = 2.0
default_color = Color(0.3, 0.3, 0.35, 0.7)

[node name="Chain2" type="Line2D" parent="Visual/Chains"]
points = PackedVector2Array(20, -40, 25, -30, 20, -20, 25, -10, 20, 0)
width = 2.0
default_color = Color(0.3, 0.3, 0.35, 0.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="SilenceParticles" type="CPUParticles2D" parent="."]
emitting = true
amount = 8
lifetime = 2.0
preprocess = 1.0
speed_scale = 0.5
explosiveness = 0.1
direction = Vector2(0, -1)
spread = 45.0
gravity = Vector2(0, -30)
initial_velocity_min = 15.0
initial_velocity_max = 30.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.2, 0.2, 0.25, 0.6)

[node name="RestorationParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 1.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.9
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, -150)
initial_velocity_min = 120.0
initial_velocity_max = 200.0
scale_amount_min = 4.0
scale_amount_max = 8.0
color = Color(1, 1, 0.5, 1)

[node name="Label" type="Label" parent="."]
offset_left = -40.0
offset_top = 45.0
offset_right = 40.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 12
text = "Silenced"
horizontal_alignment = 1
